# monty_carlos_batch

./: Cargo.toml  README.md  USE-CASE-1_Data-fit-to-NormDistr.toml  USE-CASE-1_Data-fit-to-NormDistr_expl.toml  USE-CASE-2_OP-Risk-Monte-Carlo-Simulation.toml  USE-CASE-2_OP-Risk-Monte-Carlo-Simulation_expl.toml  example.toml
src/: input.rs  main.rs  snowfall.rs
src/input/: simulation.rs
