[package]
name = "monty_carlos_batch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monty_carlos = { git = "https://github.com/necrosovereign/monty_carlos", version = "0.2.1" }
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
